# cpp17-thrust-example

./: .gitignore  .gitmodules  CMakeLists.txt  gpu_description.txt
cmake/: add_thrust.cmake  solve_dependencies.cmake
